<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.95"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.059895832"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline4"
            app:layout_constraintGuide_begin="365dp"/>
    <ImageView
            app:srcCompat="@drawable/img_tictactoe"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"

            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline6"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:layout_height="159dp" android:layout_width="277dp" android:contentDescription="@string/img"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline6"
            app:layout_constraintGuide_percent="0.03"/>
    <TextView
            android:text="@string/tic_tac_toe"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:id="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="40sp"
            android:textStyle="bold|italic" android:textColor="@android:color/holo_green_dark"
            app:layout_constraintHorizontal_bias="0.483"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="8dp"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline7"
            app:layout_constraintGuide_percent="0.51663405"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="307dp" android:id="@+id/guideline8"/>
    <TextView
            android:text="@string/one_app_one_game_made_by_saddam_cheikh_for_android_exam_on_dec_17th_2018"
            android:layout_width="315dp"
            android:layout_height="49dp"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            app:layout_constraintBottom_toTopOf="@+id/guideline8" app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintVertical_bias="0.441"
            android:gravity="start"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline8" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" android:text="@string/please_enter_your_name"
            android:gravity="start" app:layout_constraintVertical_bias="0.095"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="335dp" android:id="@+id/guideline"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" android:autofillHints="" android:gravity="start"/>
    <ImageView
            android:layout_width="76dp"
            android:layout_height="46dp" app:srcCompat="@drawable/img_epita"
            android:id="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp" android:layout_marginBottom="12dp"
            android:contentDescription="logo_epita"/>
    <TextView
            android:text="@string/made_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toStartOf="@+id/imageView2"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="START"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonStart" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>
</android.support.constraint.ConstraintLayout>